<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="800dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/editNameText"
                android:onClick="clearSummary"/>

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:text="@string/toppings"
                style="@style/headerStyleText"/>

            <View
                android:id="@+id/lineview"
                android:layout_width="215dp"
                android:layout_height="1dp"
                android:background="#000000" />

            <CheckBox
                android:id="@+id/whippedcream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp"
                android:onClick="clearSummary"/>
            <CheckBox
                android:id="@+id/chocolatechip_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/chocolate_chips"
                android:textSize="16sp"
                android:onClick="clearSummary"/>

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="9dp"
                android:text="@string/quantity"
                style="@style/headerStyleText"/>

            <View
                android:id="@+id/lineview2"
                android:layout_width="215dp"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#c2c0c0"
                    android:onClick="minus"
                    android:text="-"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="2"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="#c2c0c0"
                    android:onClick="plus"
                    android:text="+"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:text="@string/order_summary"
                style="@style/headerStyleText"/>
            <View
                android:id="@+id/lineview3"
                android:layout_width="215dp"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="9dp"
                android:text="$0"
                android:textColor="#000000"
                android:textSize="20sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="16dp"
                android:background="#c2c0c0"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="#000000"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>